# robot-prog-public

./: .gitignore  CMakeLists.txt  README.md  lidar.cpp  lidar.h  lidar_analyzer.cpp  lidar_analyzer.h  movements.cpp  movements.h  read_lidar_data.py  robot-prog-arduino-version.h  robot-prog-lidar-reception-arduino-version.h  robot-prog.ino  states.cpp  states.h  strategy.cpp  strategy.h  utilities.cpp  utilities.h
misc/: bad_1.txt  lidar_data.txt  lidar_data_bas_centre_regarde_tout_droit.txt  lidar_data_bas_droite_regarde_droite.txt  lidar_data_bas_droite_regarde_droite_inverse.txt  lidar_data_bas_droite_regarde_gauche.txt  lidar_data_bas_droite_regarde_gauche_inverse.txt  lidar_data_bas_gauche_regarde_droite.txt  lidar_data_bas_gauche_regarde_droite_inverse.txt  lidar_data_bas_gauche_regarde_droite_obstacle.txt  lidar_data_bas_gauche_regarde_droite_obstacle2.txt  lidar_data_bas_gauche_regarde_droite_obstacle3.txt  lidar_data_bas_gauche_regarde_droite_obstacle4.txt  lidar_data_bas_gauche_regarde_gauche.txt  lidar_data_bas_gauche_regarde_gauche_inverse.txt  lidar_data_center1.txt  lidar_data_centre_droite_regarde_droite.txt  lidar_data_centre_gauche_regarde_gauche.txt  lidar_data_diagonale_obstacle_good.txt  lidar_data_diagonale_obstacle_good2.txt  lidar_data_droit_obstacle_wrong.txt  lidar_data_droit_obstacle_wrong2.txt  lidar_data_droit_obstacle_wrong3.txt  lidar_data_haut_droite_regarde_droite.txt  lidar_data_haut_droite_regarde_gauche.txt  lidar_data_haut_gauche_regarde_droite.txt  lidar_data_haut_gauche_regarde_gauche.txt  lidar_data_haut_milieu_regarde_droite.txt  lidar_data_haut_milieu_regarde_gauche.txt  lidar_data_obstacle_good_wall.txt  lidar_data_obstacle_wrong_wall.txt  lidar_x0_y20_ne_voit_que_2_murs.txt  lidar_x30_y20_2_obstacles_1.txt  lidar_x30_y20_2_obstacles_2.txt  lidar_x30_y20_2_obstacles_3_guess_4eme_mur.txt  lidar_x30_y20_2_obstacles_5_guess_4eme_mur_BAD.txt  lidar_x30_y20_2_obstacles_6_obstacle_proche.txt  lidar_x30_y20_2_obstacles_7_ne_voit_que_2_murs.txt  lidar_x40_y80_ne_voit_que_2_murs_1.txt  lidar_x40_y80_ne_voit_que_2_murs_2.txt  (+5 more)
robot-prog-arduino-version/: robot-prog-arduino-version.ino
robot-prog-lidar-reception-arduino-version/: lidar_reception_V1.ino  lidar_reception_V2.ino  robot-prog-lidar-reception-arduino-version.ino
source/: robot-prog-arduino-version.cpp  robot-prog-lidar-reception-arduino-version.cpp
src/: lidar.cpp  lidar.h  lidar_analyzer.cpp  lidar_analyzer.h  lidar_analyzer_anc.cpp  lidar_analyzer_anc.h  logger.cpp  logger.h  movements.cpp  movements.h  src.ino  states.cpp  states.h  strategy.cpp  strategy.h  utilities.cpp  utilities.h
test/: f1.cpp  f1.h  fake_arduino_unit.cpp  test1.cpp  (+5 more)
(+3 files in other folders)
